--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@
     </div>
   </header>
 
-  <!-- ===== Hero Section ===== -->
+  <!-- ===== Hero Section (Video Background) ===== -->
   <section class="hero">
+    <video autoplay muted loop playsinline class="hero-video">
+      <source src="assets/mautours.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
     <div class="hero-content">
       <h2>Explore the Beauty of Mauritius with Mautours</h2>
       <p>Uncover breathtaking landscapes, turquoise lagoons, and unforgettable experiences across our paradise island.</p>
@@ -36,7 +40,7 @@
   <section id="about" class="container fade-in">
     <h2>About Us</h2>
     <p class="center">
-      At Mautours, we provide exceptional guided experiences, blending comfort, adventure, and the authentic beauty of Mauritius. 
+      At Mautours, we provide exceptional guided experiences, blending comfort, adventure, and the authentic beauty of Mauritius.
       Whether you're here for the sun, the sea, or the culture, we make sure your journey is unforgettable.
     </p>
   </section>
@@ -89,7 +93,6 @@
     <p>&copy; 2025 Mautours. All Rights Reserved.</p>
   </footer>
 
-  <!-- ===== Scripts ===== -->
   <script src="js/main.js"></script>
 </body>
 </html>
