--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <!-- ===== Hero Section (Video Background) ===== -->
   <section class="hero">
     <video autoplay muted loop playsinline class="hero-video">
-      <source src="assets/mautours.mp4" type="video/mp4">
+      <source src="mauvid1.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
     <div class="hero-content">
