--- a/booking.html
+++ b/booking.html
@@ -23,14 +23,19 @@
     </div>
   </header>
 
-  <!-- ===== Hero Section ===== -->
-  <section class="hero" style="background-image: linear-gradient(to bottom, rgba(0,0,0,0.45), rgba(0,0,0,0.65)), url('assets/ile.jpg');">
+  <!-- ===== Hero Section (Video Background) ===== -->
+  <section class="hero">
+    <video autoplay muted loop playsinline class="hero-video">
+      <source src="mauvid2.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
     <div class="hero-content">
-      <h2>Book Your Perfect Adventure</h2>
-      <p>Choose from our top destinations and enjoy the beauty of Mauritius like never before.</p>
-      <a href="#packages" class="btn">Explore Packages</a>
+      <h2>Explore the Beauty of Mauritius with Mautours</h2>
+      <p>Uncover breathtaking landscapes, turquoise lagoons, and unforgettable experiences across our paradise island.</p>
+      <a href="booking.html" class="btn">Book Your Trip</a>
     </div>
   </section>
+
 
   <!-- ===== Packages Section ===== -->
   <section id="packages" class="container fade-in">
