--- a/booking.html
+++ b/booking.html
@@ -30,9 +30,9 @@
       Your browser does not support the video tag.
     </video>
     <div class="hero-content">
-      <h2>Explore the Beauty of Mauritius with Mautours</h2>
-      <p>Uncover breathtaking landscapes, turquoise lagoons, and unforgettable experiences across our paradise island.</p>
-      <a href="booking.html" class="btn">Book Your Trip</a>
+      <h2>Book Your Perfect Adventure</h2>
+      <p>Choose from our top destinations and enjoy the beauty of Mauritius like never before.</p>
+      <a href="#packages" class="btn">Explore Packages</a>
     </div>
   </section>
 
