--- a/admin.html
+++ b/admin.html
@@ -67,6 +67,15 @@
     </section>
   </main>
 
+  <!-- ===== Custom Popup ===== -->
+  <div id="popup" class="popup">
+    <div class="popup-content">
+      <h3 id="popupTitle"></h3>
+      <p id="popupMessage"></p>
+      <button id="popupBtn" class="btn">OK</button>
+    </div>
+  </div>
+
   <!-- ===== Footer ===== -->
   <footer class="footer">
     <p>&copy; 2025 Mautours. All Rights Reserved.</p>
